--- a/src/pages/posts/01-测试.md
+++ b/src/pages/posts/01-测试.md
@@ -1,4 +1,5 @@
-<img src="https://gw.alipayobjects.com/zos/k/h5/hzL4LG.jpg" width="800" />  
+<img src="https://images.neijuan.fun/demo/1.jpg" width="800" />  
+<img src="https://images.neijuan.fun/demo/2.jpg" width="800" />  
 
-<small>测试。</small>  
+<small>美女。</small>  
 
