--- a/src/pages/posts/01-美女.md
+++ b/src/pages/posts/01-美女.md
@@ -1,4 +1,4 @@
-<img src="https://images.neijuan.fun/demo/1.jpg" width="800" />
+<img src="./assets/logo.png" width="800" />
 
 <small>美女。</small>  
 
